--- a/Resources/Private/Partials/Mail/CartSummary.html
+++ b/Resources/Private/Partials/Mail/CartSummary.html
@@ -10,7 +10,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.cart.net}">
     <tr class="first">
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_cart_cart.net"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_cart_cart.net"/>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <span class="price">
@@ -22,7 +22,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.cart.gross}">
     <tr>
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_cart_cart.gross"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_cart_cart.gross"/>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <span class="price">
@@ -39,7 +39,7 @@
     <f:if condition="{settings.showCartAction.summary.fields.discount.net}">
         <tr>
             <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-                <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.discount_net"/>
+                <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.discount_net"/>
             </td>
             <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
                 <span class="price">
@@ -51,7 +51,7 @@
     <f:if condition="{settings.showCartAction.summary.fields.discount.gross}">
         <tr>
             <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-                <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.discount_gross"/>
+                <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.discount_gross"/>
             </td>
             <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
                 <span class="price">
@@ -68,7 +68,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.service.net}">
     <tr>
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.service_net"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.service_net"/>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <span class="price">
@@ -80,7 +80,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.service.gross}">
     <tr>
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.service_gross"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.service_gross"/>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <span class="price">
@@ -96,7 +96,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.total.net}">
     <tr>
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.total_net"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.total_net"/>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <span class="price">
@@ -108,7 +108,7 @@
 <f:if condition="{settings.showCartAction.summary.fields.total.gross}">
     <tr>
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.total_gross"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.total_gross"/>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <span class="price">
