--- a/Resources/Private/Partials/Mail/OrderInformation.html
+++ b/Resources/Private/Partials/Mail/OrderInformation.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
         <td width="600" height="34" valign="center" style="background-color:#2d4554; color:#fff; padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-            <b><f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.mail.order_information" /></b>
+            <b><f:translate extensionName="Cart" key="tx_cart.mail.order_information" /></b>
         </td>
     </tr>
     <tr>
