--- a/Resources/Private/Partials/Mail/Cart.html
+++ b/Resources/Private/Partials/Mail/Cart.html
@@ -11,16 +11,16 @@
     <thead>
     <tr class="first last" style="background-color:#2d4554; color:#fff;">
         <th colspan="2" rowspan="1" height="34" valign="center" style="text-align: left; padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.title"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.title"/>
         </th>
         <th colspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.price"/>
         </th>
         <th colspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.count"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.count"/>
         </th>
         <th colspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price_total"/>
+            <f:translate extensionName="Cart" key="tx_cart_domain_model_order_product.price_total"/>
         </th>
     </tr>
     </thead>
