[TASK] Include order comment in backend view
Show the comment which a customer can enter during
the checkout process of an order.

Fixes #358

--- a/Resources/Private/Templates/Backend/Order/Order/Show.html
+++ b/Resources/Private/Templates/Backend/Order/Order/Show.html
@@ -17,6 +17,13 @@
         <f:render partial="Backend/Order/Show/Address" arguments="{orderItem: orderItem}"/>
     </div>
 
+    <f:if condition="{orderItem.comment}">
+        <div style="padding-bottom: 20px;">
+            <strong><f:translate key="tx_cart_domain_model_order_item.comment"/>:</strong><br/>
+            {orderItem.comment -> f:sanitize.html()}
+        </div>
+    </f:if>
+
     <div style="padding-bottom: 20px;">
         <f:render partial="Backend/Order/Show/Cart" arguments="{orderItem: orderItem}"/>
     </div>
