[TASK] Unify label styling in backend view
Styling the label of the tax identification number
bold as done with other labels.

--- a/Resources/Private/Partials/Backend/Order/Show/Address.html
+++ b/Resources/Private/Partials/Backend/Order/Show/Address.html
@@ -32,9 +32,11 @@
         <f:if condition="{address.taxIdentificationNumber}">
             <br/>
             <div>
+                <strong><f:translate key="tx_cart_domain_model_order_address.tax_identification_number"/>:<br/></strong>
                 {address.taxIdentificationNumber}
             </div>
         </f:if>
+
     </div>
 </f:section>
 
